NULL = 

noinst_DATA = \
    debian/debian/changelog \
    debian/debian/compat \
    debian/debian/control \
    debian/debian/copyright \
    debian/debian/docs \
    debian/debian/rules \
    debian/debian/watch \
    debian/debian/xnoise.1 \
    debian/debian/xnoise-dev.install \
    debian/debian/xnoise.install \
    debian/debian/xnoise.manpages \
    debian/debian/xnoise-plugins.install \
    debian/debian/source/format \
    debian/debian/source/include-binaries \
    ubuntu/precise/debian/changelog \
    ubuntu/precise/debian/compat \
    ubuntu/precise/debian/control \
    ubuntu/precise/debian/copyright \
    ubuntu/precise/debian/docs \
    ubuntu/precise/debian/rules \
    ubuntu/precise/debian/watch \
    ubuntu/precise/debian/xnoise.1 \
    ubuntu/precise/debian/xnoise-dev.install \
    ubuntu/precise/debian/xnoise.install \
    ubuntu/precise/debian/xnoise.manpages \
    ubuntu/precise/debian/xnoise-ubuntuone-music-store-plugin.install \
    ubuntu/precise/debian/source/format \
    ubuntu/precise/debian/source/include-binaries \
    ubuntu/quantal/debian/changelog \
    ubuntu/quantal/debian/compat \
    ubuntu/quantal/debian/control \
    ubuntu/quantal/debian/copyright \
    ubuntu/quantal/debian/docs \
    ubuntu/quantal/debian/rules \
    ubuntu/quantal/debian/watch \
    ubuntu/quantal/debian/xnoise.1 \
    ubuntu/quantal/debian/xnoise-dev.install \
    ubuntu/quantal/debian/xnoise.install \
    ubuntu/quantal/debian/xnoise.manpages \
    ubuntu/quantal/debian/xnoise-ubuntuone-music-store-plugin.install \
    ubuntu/quantal/debian/source/format \
    ubuntu/quantal/debian/source/include-binaries \
    $(NULL)


EXTRA_DIST = \
    $(noinst_DATA)
