NULL = 

noinst_DATA = \
    debian/debian/changelog \
    debian/debian/compat \
    debian/debian/control \
    debian/debian/copyright \
    debian/debian/docs \
    debian/debian/rules \
    debian/debian/watch \
    debian/debian/xnoise.1 \
    debian/debian/xnoise-dev.install \
    debian/debian/xnoise.install \
    debian/debian/xnoise.manpages \
    debian/debian/xnoise-plugins.install \
    debian/debian/source/format \
    debian/debian/source/include-binaries \
    ubuntu/quantal/debian/changelog \
    ubuntu/quantal/debian/compat \
    ubuntu/quantal/debian/control \
    ubuntu/quantal/debian/copyright \
    ubuntu/quantal/debian/docs \
    ubuntu/quantal/debian/rules \
    ubuntu/quantal/debian/watch \
    ubuntu/quantal/debian/xnoise.1 \
    ubuntu/quantal/debian/xnoise-dev.install \
    ubuntu/quantal/debian/xnoise.install \
    ubuntu/quantal/debian/xnoise.manpages \
    ubuntu/quantal/debian/source/format \
    ubuntu/quantal/debian/source/include-binaries \
    ubuntu/raring/debian/changelog \
    ubuntu/raring/debian/compat \
    ubuntu/raring/debian/control \
    ubuntu/raring/debian/copyright \
    ubuntu/raring/debian/docs \
    ubuntu/raring/debian/rules \
    ubuntu/raring/debian/watch \
    ubuntu/raring/debian/xnoise.1 \
    ubuntu/raring/debian/xnoise-dev.install \
    ubuntu/raring/debian/xnoise.install \
    ubuntu/raring/debian/xnoise.manpages \
    ubuntu/raring/debian/source/format \
    ubuntu/raring/debian/source/include-binaries \
    ubuntu/saucy/debian/changelog \
    ubuntu/saucy/debian/compat \
    ubuntu/saucy/debian/control \
    ubuntu/saucy/debian/copyright \
    ubuntu/saucy/debian/docs \
    ubuntu/saucy/debian/rules \
    ubuntu/saucy/debian/watch \
    ubuntu/saucy/debian/xnoise.1 \
    ubuntu/saucy/debian/xnoise-dev.install \
    ubuntu/saucy/debian/xnoise.install \
    ubuntu/saucy/debian/xnoise.manpages \
    ubuntu/saucy/debian/source/format \
    ubuntu/saucy/debian/source/include-binaries \
    ubuntu/trusty/debian/changelog \
    ubuntu/trusty/debian/compat \
    ubuntu/trusty/debian/control \
    ubuntu/trusty/debian/copyright \
    ubuntu/trusty/debian/docs \
    ubuntu/trusty/debian/rules \
    ubuntu/trusty/debian/watch \
    ubuntu/trusty/debian/xnoise.1 \
    ubuntu/trusty/debian/xnoise-dev.install \
    ubuntu/trusty/debian/xnoise.install \
    ubuntu/trusty/debian/xnoise.manpages \
    ubuntu/trusty/debian/source/format \
    ubuntu/trusty/debian/source/include-binaries \
    $(NULL)


EXTRA_DIST = \
    $(noinst_DATA)
