NULL =

ui_DATA = add_folder.ui \
	   main_window.ui \
	   settings.ui \
	   album.png \
	   artist.png \
	   ente.png \
	   genre.png \
	   guitar.png \
	   note.png \
	   $(NULL)	


uidir = $(datadir)/xnoise/ui

EXTRA_DIST = \
	$(ui_DATA) \
	$(NULL)	

DISTCLEANFILES = \
	Makefile.in \
	$(NULL)
	
MAINTAINERCLEANFILES = \
	Makefile.in \
	$(NULL)
	



