NULL =

ui_DATA = \
        add_media.ui \
        main_window.ui \
        main_ui.xml \
        settings.ui \
        xnoise_bruit_48x48.png \
        xnoise_bruit_16x16.png \
        xnoise_bruit.svg \
        xnoise_16x16.png \
        xnoise_48x48.png \
        $(NULL)    

uidir = $(datadir)/xnoise/ui

EXTRA_DIST = \
    $(ui_DATA) \
    $(NULL)    

DISTCLEANFILES = \
    Makefile.in \
    $(NULL)

MAINTAINERCLEANFILES = \
    Makefile.in \
    $(NULL)

