NULL =

ui_DATA = \
        add_media.ui \
        first_start.ui \
        main_window.ui \
        tracklist.ui \
        video.ui \
        lyrics.ui \
        settings.ui \
        metadat_title.ui \
        metadat_artist_album.ui \
        main_ui.xml \
        xnoise_bruit_48x48.png \
        xnoise_bruit_16x16.png \
        xnoise_bruit.svg \
        xnoise_16x16.png \
        xnoise_48x48.png \
        $(NULL)    

uidir = $(datadir)/xnoise/ui

EXTRA_DIST = \
    $(ui_DATA) \
    $(NULL)    

DISTCLEANFILES = \
    Makefile.in \
    $(NULL)

