NULL =

ui_DATA = \
    add_media.ui \
    first_start.ui \
    main_window.ui \
    settings.ui \
    metadat_title.ui \
    metadata_album.ui \
    metadat_genre.ui \
    metadat_artist_album.ui \
    main_ui.xml \
    xnoise_bruit.svg \
    $(NULL)

uidir = $(datadir)/xnoise/ui

EXTRA_DIST = \
    $(ui_DATA) \
    $(NULL)

DISTCLEANFILES = \
    Makefile.in \
    $(NULL)

